base/builds/regulus/argocd/projects/inference/manifests/open-webui/Deployment-open-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/name: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: open-webui
    spec:
      containers:
      - name: open-webui
<<<<<<< Updated upstream
        image: ghcr.io/open-webui/open-webui:0.11.4-slim
=======
        image: ghcr.io/open-webui/open-webui:0.11.4-slim-slim
>>>>>>> Stashed changes
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
        volumeMounts:
        - mountPath: /app/backend/data
          name: webui-storage
      volumes:
      - name: webui-storage
        persistentVolumeClaim:
          claimName: open-webui
