base/builds/regulus/argocd/projects/inference/manifests/open-webui/Service-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  selector:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
