base/builds/regulus/argocd/projects/inference/manifests/open-webui/HTTPRoute-ai.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai
spec:
  hostnames:
  - ai.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: open-webui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
